[tool.poetry]
name = "waterloo"
version = "0.7.5"
license = 'MIT'
description = "Tool to convert 'typed docstrings' (i.e. Sphinx 'Napoleon' format) to PEP-484 Py2 type comments."
authors = ["Anentropic <ego@anentropic.com>"]
homepage = 'https://github.com/anentropic/python-waterloo'
readme = "README.md"
include = [
	"waterloo/py.typed"
]
packages = [
    { include = "waterloo" },
    { include = "bowler" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
regex = "^2020.2.20"
fissix = {version = "^19.2b1", allow-prereleases = true}
typing-extensions = "^3.7.4"
toml = "^0.10.0"
megaparsy = "^0.1.4"
typesystem = "^0.2.4"
prompt-toolkit = "^3.0.3"
pydantic = "^1.6.1"
parso = "^0.7.0,<0.8.0"
inject = "^4.3.1"
structlog = "^20.1.0"
colorama = "^0.4.3"
# (We had to vendor our fork of Bowler into this package)
# bowler = {file = "https://github.com/anentropic/Bowler/tarball/0.8.0-post2"}
# Bowler deps:
attrs = "^20.1.0"
click = "^7.1.2"
moreorless = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
hypothesis = "^5.5.4"
pytype = "^2020.8.17"

[tool.poetry.scripts]
waterloo = "waterloo.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
